Adds Logout button in html

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <button id="home">Home</button>
+  <button id="logout-btn" class="hidden">Sair</button>
 
   <div id="root"></div>
 
@@ -25,7 +25,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
     
   <script type="module" src="router.js"></script>
-  <script type="module" src="./services/firebase-config.js"></script>
+  <script src="./services/firebase-config.js"></script>
 </body>
 
 </html>
