--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./style.css">
   <!-- CDN DO FONT AWESOME -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-  <title>Social Network - Livros</title>
+  <title>Bookshelf</title>
 </head>
 
 <body>
